Fixed sizing on mobile

--- a/components/Slide.module.scss
+++ b/components/Slide.module.scss
@@ -5,6 +5,7 @@ $margin: 20px;
 .container {
     width: $width;
     height: $height;
+    max-height: calc(100svh - 100px);
     display: flex;
     flex-direction: column;
     position: relative;
